@@ -63,6 +63,7 @@
             <arg>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</arg>
             <arg>--add-exports=java.desktop/java.awt.dnd.peer=ALL-UNNAMED</arg>
             <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
+            <arg>--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED</arg>
             <arg>--add-exports=java.desktop/sun.awt.datatransfer=ALL-UNNAMED</arg>
             <arg>--add-exports=java.desktop/sun.font=ALL-UNNAMED</arg>
           </compilerArgs>
